Cadastro e verificaçã de login no firebase, com testes para envio de email

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,14 @@
             android:name=".ActivityReiniciar"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".ActivityCadastro"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ActivityRecuperar"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
